Added super user requirement.

--- a/timer.html
+++ b/timer.html
@@ -12,7 +12,7 @@
         <span class="pull-right">
           <button id="create-timer" class="btn btn-primary fa fa-plus"></button>
         </span>
-        <span translatable="yes">Creates a Timer and Service</span>
+        <span translatable="yes">Creates a Timer and Service (Must be super user)</span>
     </div>
     <table class="cockpit-form-table">
     	<tbody>
